--- a/angular2/src/app/header/header.component.html
+++ b/angular2/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header-logo">
     <div class="inner">
       <div class="logo">
-        <a href="#" [routerLink]="['/']"><img src="./assets/images/logo.jpg" alt="logo"></a>
+        <a href="#" [routerLink]="['/']"><img src="./assets/images/logo2.jpg" alt="logo"></a>
         <div class="name-logo">
           <a href="#" [routerLink]="['/']">Dictcards</a>
         </div>
