--- a/angular2/src/app/user/settings.component.css
+++ b/angular2/src/app/user/settings.component.css
@@ -159,6 +159,10 @@
 
   #a2 {
     display: block !important;
+    width: 100%;
+  }
+  #a2 input {
+    width: 100% !important;
   }
 
   .wrapper {
