--- a/angular2/src/app/deck-details/deck-details.component.css
+++ b/angular2/src/app/deck-details/deck-details.component.css
@@ -633,3 +633,22 @@ div:focus{outline:none;}
     margin: 10px;
   }
 }
+
+@media only screen and (max-width: 350px) {
+  .name-deck {
+    font-size: 20px !important;
+  }
+
+  .favorite {
+    width: 300px !important;
+  }
+
+  .author .img span {
+    display: none;
+  }
+
+  .img-deck img {
+    width: 80px !important;
+    height: 92px !important;
+  }
+}
