--- a/angular2/src/app/header/search_deck.component.html
+++ b/angular2/src/app/header/search_deck.component.html
@@ -1,22 +1,24 @@
-<div class="col-xs-12 col-md-8 profile-content">  
-  <div class="container" style="width: 100%">
-    <div class="containerTab">
-      <div class="container-tab-content">
-        <div class="list-deck">
-          <div *ngFor="let deck of search_decks">
-            <div class="row" style="margin-bottom: 15px;">
-              <div class="image-wrap">
-                <div class="item-deck">
-                  <div class="image-cover">
-                    <a href ="#" [routerLink]="['/decks', deck.id]">
-                      <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
-                    </a>
-                  </div>
-                  <div class="name">
-                    <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-                    <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.description}}</a>
-                    <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
-                    <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
+<div class="row">
+  <div class="col-xs-12 col-md-8 profile-content">
+    <div class="container" style="width: 100%">
+      <div class="containerTab">
+        <div class="container-tab-content">
+          <div class="list-deck">
+            <div *ngFor="let deck of search_decks">
+              <div class="row" style="margin-bottom: 15px;">
+                <div class="image-wrap">
+                  <div class="item-deck">
+                    <div class="image-cover">
+                      <a href ="#" [routerLink]="['/decks', deck.id]">
+                        <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
+                      </a>
+                    </div>
+                    <div class="name">
+                      <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
+                      <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.description}}</a>
+                      <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
+                      <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
+                    </div>
                   </div>
                 </div>
               </div>
