--- a/angular2/src/app/user/user.component.css
+++ b/angular2/src/app/user/user.component.css
@@ -120,8 +120,8 @@
   display: inline-block;
   font-family: DINNextRoundedLTPro-Bold,sans-serif;
   font-size: 15px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
   padding: 25px 0 10px;
   text-transform: uppercase;
 }
@@ -201,5 +201,17 @@
   }
   .nav-item a {
     padding: 15px !important;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .list-deck img {
+    width: 120px !important;
+    height: 145px !important;
+  }
+
+  .tab-header .tab-title {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
   }
 }
