--- a/angular2/src/app/edit-deck/edit-deck.component.css
+++ b/angular2/src/app/edit-deck/edit-deck.component.css
@@ -22,7 +22,7 @@
   font-family: DINNextRoundedLTPro-Medium, sans-serif;
 }
 .left .txt input:focus{
-  border-bottom: 2px solid #32cdff;
+  border-bottom: 2px solid #276d8c;
   opacity: .9;
 }
 .left .txt input:placeholder-shown {
@@ -60,9 +60,9 @@
   margin-top: 20px;
 }
 .left .txt .btn-ct .btn-ct-publ {
-  background-color: #32cdff;
+  background-color: #276d8c;
   border-radius: 4px;
-  border: 2px solid #32cdff;
+  border: 2px solid #276d8c;
   cursor: pointer;
   font-weight: bold;
   margin-left: 8px;
@@ -70,7 +70,7 @@
   width: 81%;
 }
 .left .txt .btn-ct .fa-cog {
-  color: #32cdff;
+  color: #276d8c;
 }
 .left .cover-deck {
   background-color: #fff;
@@ -92,7 +92,7 @@
   width: 100%;
 }
 .left .cover-deck .import-cover-deck .ct-text {
-  color: #32cdff;
+  color: #276d8c;
   font-weight: bold;
   margin-top: 10px;
 }
@@ -145,7 +145,7 @@
   cursor: pointer;
 }
 .add {
-  background-color: #32cdff;
+  background-color: #276d8c;
   border-radius: 100%;
   border: none;
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.18);
@@ -177,7 +177,7 @@
   outline: none;
 }
 .del .fa-trash-o {
-  color: #32cdff;
+  color: #276d8c;
   font-size: 25px;
   opacity: 0;
 }
@@ -205,7 +205,7 @@
   outline: none;
 }
 .right .wrapper .list-option .del .fa-trash-o {
-  color: #32cdff;
+  color: #276d8c;
   font-size: 25px;
   opacity: 0.7;
 }
