--- a/angular2/src/app/import-deck/import-deck.component.css
+++ b/angular2/src/app/import-deck/import-deck.component.css
@@ -27,7 +27,7 @@
 }
 .import-btn span, a{
   cursor: pointer;
-  color: #32cdff;
+  color: #276d8c;
   font-size: 15px;
 }
 
@@ -65,7 +65,7 @@
   font-family: DINNextRoundedLTPro-Medium, sans-serif;
 }
 .left .txt input:focus{
-  border-bottom: 2px solid #32cdff;
+  border-bottom: 2px solid #276d8c;
   font-family: DINNextRoundedLTPro-Medium, sans-serif;
   opacity: .9;
 }
@@ -107,16 +107,16 @@
   outline: none;
 }
 .left .txt .btn-ct .btn-ct-publ {
-  background-color: #32cdff;
+  background-color: #276d8c;
   border-radius: 12px;
-  border: 2px solid #32cdff;
+  border: 2px solid #276d8c;
   cursor: pointer;
   font-weight: bold;
   opacity: 0.7;
   width: 100%;
 }
 .left .txt .btn-ct .fa-cog {
-  color: #32cdff;
+  color: #276d8c;
 }
 .left .cover-deck {
   background-color: #fff;
@@ -139,7 +139,7 @@
   width: 100%;
 }
 .left .cover-deck .import-cover-deck .ct-text {
-  color: #32cdff;
+  color: #276d8c;
   font-weight: bold;
   margin-top: 10px;
 }
@@ -192,7 +192,7 @@
   cursor: pointer;
 }
 .add {
-  background-color: #32cdff;
+  background-color: #276d8c;
   border-radius: 100%;
   border: none;
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.18);
@@ -224,7 +224,7 @@
   outline: none;
 }
 .del .fa-trash-o {
-  color: #32cdff;
+  color: #276d8c;
   font-size: 25px;
   opacity: 0;
 }
@@ -252,7 +252,7 @@
   outline: none;
 }
 .right .wrapper .list-option .del .fa-trash-o {
-  color: #32cdff;
+  color: #276d8c;
   font-size: 25px;
   opacity: 0.7;
 }
