--- a/angular2/src/app/lesson/lesson.component.css
+++ b/angular2/src/app/lesson/lesson.component.css
@@ -180,7 +180,7 @@
   font-weight: 600;
 }
 .les-wrapper .les-card .btn-continue {
-  background-color: #32cdff;
+  background-color: #276d8c;
   border: none;
   border-radius: 10px;
   color: #fff;
@@ -218,7 +218,7 @@
   border-radius: 15px;
   border: 3px solid #98e6ff;
   background-color: white;
-  color: #32cdff;
+  color: #276d8c;
   cursor: pointer;
   display: block;
   flex-grow: 1;
@@ -233,7 +233,7 @@
   border-radius: 15px;
   border: 3px solid #98e6ff;
   background-color: white;
-  color: #32cdff;
+  color: #276d8c;
   cursor: pointer;
   display: block;
   flex-grow: 1;
@@ -244,7 +244,7 @@
   margin-bottom: 20px;
 }
 .les-wrapper .les-choice .answers .list-ans button:hover {
-  border: 3px solid #32cdff;
+  border: 3px solid #276d8c;
 }
 .les-wrapper .les-choice .txt-answers {
   position: relative;
@@ -255,7 +255,7 @@
   position: absolute;
   top: 45%;
   width: 100%;
-  border-bottom: 2px solid #32cdff;
+  border-bottom: 2px solid #276d8c;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -301,7 +301,7 @@
   opacity: .9;
 }
 .les-wrapper .les-choice .txt-answers .ct-answers:hover {
-  border-bottom: 3px solid #32cdff;
+  border-bottom: 3px solid #276d8c;
 }
 .les-wrapper .les-choice .txt-answers .ct-answers input::placeholder {
   opacity: .8;
