--- a/angular2/src/app/user/user.component.css
+++ b/angular2/src/app/user/user.component.css
@@ -2,16 +2,16 @@
   background-color: transparent;
   width: 80%;
   margin-right: 5px;
-  color: #32cdff;
-  border: 2px solid #32cdff;
+  color: #276d8c;
+  border: 2px solid #276d8c;
 }
 
 .btn-followed {
-  background-color: #32cdff;
+  background-color: #276d8c;
   width: 80%;
   margin-right: 5px;
   color: white;
-  border: 2px solid #32cdff;
+  border: 2px solid #276d8c;
 }
 
 .user-profile .user-profile-info {
@@ -32,7 +32,7 @@
   padding: 0;
 }
 .user-profile .user-profile-info .user-profile-follow {
-  color: #32cdff;
+  color: #276d8c;
   font-family: DINNextRoundedLTPro-Medium,sans-serif;
   padding-left: 8px;
   padding-right: 8px;
@@ -61,16 +61,17 @@
   position: relative;
   width: 100%;
   background-color: transparent;
-  border: 2px solid #32cdff;
+  border: 2px solid #276d8c;
   border-radius: 7px;
-  color: #32cdff;
+  color: #276d8c;
   padding: 7px 45px;
 }
-.user-profile .user-profile-info .profile-setting a .img-setting {
+.user-profile .user-profile-info .profile-setting a .fa {
   display: inline-block;
   -webkit-box-flex: 0;
   -ms-flex-positive: 0;
   flex-grow: 0;
+  font-size: 20px;
   height: 23px;
   margin-right: 5px;
   width: 23px;
@@ -92,9 +93,9 @@
   margin-left: 6px;
   max-width: 42px;
   background-color: transparent;
-  border: 2px solid #32cdff;
+  border: 2px solid #276d8c;
   border-radius: 7px;
-  color: #32cdff;
+  color: #276d8c;
   padding: 8px 10px;
   outline: none;
 }
@@ -142,8 +143,8 @@
   position: relative;
 }
 .tab-active {
-  border-bottom: 4px solid #32cdff;
-  color: #32cdff !important;
+  border-bottom: 4px solid #276d8c;
+  color: #276d8c !important;
   padding-bottom: 11px;
 }
 .profile-content .container .image-wrap img {
