--- a/my-tinycards-api/app/assets/stylesheets/customadmin.css
+++ b/my-tinycards-api/app/assets/stylesheets/customadmin.css
@@ -329,6 +329,9 @@ input:focus {
     border-radius: 4px;
     display: block;
 }
+.sidebar .nav li {
+    margin-bottom: 15px;
+}
 
 .sidebar .nav li.active > a {
     color: #FFFFFF;
