--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -67,12 +67,12 @@
                 <div class="containerr" *ngFor="let card of deck.cards">
                   <div class="ct-card" (click)="flipped($event)" [class.flipped]="false">
                     <div class="item-card front">
-                      <div *ngIf="card.picture" style="height: 182px">
+                      <div *ngIf="card.picture" style="height: 170px">
                         <img src="{{card.picture.url}}" onError="this.src='./assets/images/card-demo.jpg';">
                       </div>
                       <p class="txt-front">{{card.front}}</p>
                     </div>
-                    <div class="item-card back">
+                    <div class="txt-front item-card back">
                       <p [innerHTML]="card.back"></p>
                     </div>
                   </div>
