validate card and add notifice

--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -3,8 +3,11 @@
 </app-header>
 <div class="viw" style="min-height:775px;">
   <div class="container" style="margin-top: 60px;">
-    <router-outlet>
-    </router-outlet>
+    <div *ngFor="let alert of alerts" class="{{ cssClass(alert) }} alert-dismissable">
+       {{alert.message}}
+       <a class="close" (click)="removeAlert(alert)">&times;</a>
+    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
 <footer style="background-color: #F7F7F7">
