--- a/angular2/src/app/user/login.component.html
+++ b/angular2/src/app/user/login.component.html
@@ -11,16 +11,18 @@
       </div>
 
       <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
           <label for="">Email address</label>
           <input type="text" autofocus="true" class="form-control"
-          placeholder="Enter email" name="email" [(ngModel)]="model.email" #email="ngModel" required >
+            placeholder="Enter email" name="email" [(ngModel)]="model.email" #email="ngModel" required >
+          <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
           <label for="">Password</label>
           <input type="password" autocomplete="off" class="form-control"
-          placeholder="Password" name="password" [(ngModel)]="model.password" #password="ngModel" required>
+            placeholder="Password" name="password" [(ngModel)]="model.password" #password="ngModel" required>
+          <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
         </div>
 
         <button type="submit" class="btn btn-block btn-custome">LOG IN</button>
@@ -29,5 +31,3 @@
     </div>
   </div>
 </div>
-
-
