--- a/angular2/src/app/user/signup.component.html
+++ b/angular2/src/app/user/signup.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <div class="card login-form shadow-nohover">
+    <div class="card login-form shadow-nohover clearfix">
       <h2 class="text-center login-form-label" style="margin-top: 3px; margin-bottom: 16px">Create your account</h2>
       <div class="text-center">
         Already have an account?
@@ -8,28 +8,32 @@
       </div>
 
       <form name="form" style="margin-top: 30px" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
           <label for="email">Email address</label>
           <input type="text" autofocus="true" name="email" class="form-control" placeholder="Enter email"
             [(ngModel)]="model.email" #email="ngModel" required >
+          <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !name.valid }">
           <label for="name">Name</label>
           <input type="text" autofocus="true" name="name" class="form-control" placeholder="Enter your name"
             [(ngModel)]="model.name" #name="ngModel" required >
+          <div *ngIf="f.submitted && !name.valid" class="help-block">Name is required</div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
           <label for="password">Password</label>
           <input type="password" autocomplete="off" name="password" class="form-control" placeholder="Password"
             [(ngModel)]="model.password" #password="ngModel" required >
+          <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password_confirmation.valid }">
           <label for="password_confirmation">Password confirmation</label>
           <input type="password" autocomplete="off" name="password_confirmation" class="form-control" placeholder="Password confirmation"
             [(ngModel)]="model.password_confirmation" #password_confirmation="ngModel" required>
+          <div *ngIf="f.submitted && !password_confirmation.valid" class="help-block">Password confirmation is required</div>
         </div>
 
         <button type="submit" class="btn btn-block btn-custome">SIGN UP</button>
@@ -37,6 +41,3 @@
     </div>
   </div>
 </div>
-
-
-
