--- a/my-tinycards-api/app/views/shared/_header_admin.html.erb
+++ b/my-tinycards-api/app/views/shared/_header_admin.html.erb
@@ -18,15 +18,23 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-globe"></i>
+            <span id="notification_count"><%= current_admin.notification_count %></span>
             <b class="caret hidden-sm hidden-xs"></b>
             <p class="hidden-lg hidden-md">
               <%= t ".notifications" %>
               <b class="caret"></b>
             </p>
-           </a>
+          </a>
+          <% if current_admin.notification_count > 0 %>
+            <ul class="dropdown-menu">
+              <% current_admin.notifications.unread.each do |noti| %>
+                <li><%= link_to noti.feed_back.status, admins_feed_backs_path %></li>
+              <% end -%>
+            </ul>
+          <% end -%>
         </li>
         <li>
-          
+
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
