--- a/angular2/src/app/lesson/lesson.component.css
+++ b/angular2/src/app/lesson/lesson.component.css
@@ -154,6 +154,9 @@
   border-radius: 15px;
   height: 225px;
 }
+.les-wrapper .les-card .containerr .front span {
+  font-size: 26px;
+}
 .les-wrapper .les-choice .containerr .front img {
   border-radius: 15px;
   height: 225px;
@@ -162,7 +165,7 @@
   background-color: white;
   color: black;
   opacity: .8;
-  font-size: 30px;
+  font-size: 26px;
   justify-content: center;
 }
 .les-wrapper .les-card .containerr .back {
@@ -171,6 +174,7 @@
 }
 .les-wrapper .les-choice .containerr .back {
   border-radius: 15px;
+  font-size: 26px;
   background-color: while;
 }
 .les-wrapper .les-card .title {
@@ -307,19 +311,30 @@
   opacity: .8;
 }
 .back span {
+  position: absolute;
+  word-wrap: break-word;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  font-size: 26px;
+  transform: translate(-50%, -50%);
+  padding: 4px;
+}
+
+.back-card span {
   float: left;
+  padding: 4px;
+  font-size: 26px;
+  word-wrap: break-word;
   position: relative;
+  width: 100%;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
 
-.back-card span {
-  float: left;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+.hidd {
+  display: none;
 }
 
 ._3yCFA{background-color:#ffd600;height:100%;transition:width .5s;}
@@ -476,7 +491,7 @@ button:disabled{cursor:not-allowed;-webkit-filter:grayscale(100%);filter:graysca
   }
 
   .les-choice .ct-card {
-    width: 240px !important;
+    width: 270px !important;
   }
 
   .les-card {
