move_import_button

--- a/angular2/src/app/create-deck-advance/create-deck-advance.component.html
+++ b/angular2/src/app/create-deck-advance/create-deck-advance.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+
+  <app-import-deck class="col-xs-12 col-md-12"></app-import-deck>
   <form [formGroup]="myForm" novalidate (ngSubmit)="save(myForm)">
     <div class="row" style="margin-top: 25px;">
       <div class="col-xs-12 col-md-4">
