--- a/angular2/src/app/import-deck/import-deck.component.css
+++ b/angular2/src/app/import-deck/import-deck.component.css
@@ -26,6 +26,7 @@
     100% { transform: rotate(360deg); }
 }
 .import-btn span, a{
+  z-index: 10;
   cursor: pointer;
   color: #276d8c;
   font-size: 15px;
@@ -39,7 +40,7 @@
   display: inline-flex;
   position: absolute;
   right: 0px;
-  padding: 22px 21px 10px 10px;
+  padding: 12px 21px 10px 10px;
 }
 .import-modal-content {
   min-height: 300px;
