--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -59,21 +59,20 @@
 
             </div>
           </div>
-
           <div id="b2" class="containerTab" style="display:none; position: relative;">
             <button type="button" (click)="ModalReport.open()" class="feedback">...</button>
             <div class="list-card">
               <div class="row" style="width: 98%;margin: auto;">
                 <div class="containerr" *ngFor="let card of deck.cards">
                   <div class="ct-card" (click)="flipped($event)" [class.flipped]="false">
-                    <div class="item-card front">
+                    <div class="item-card front" id="front-value">
                       <div *ngIf="card.picture" style="height: 182px">
                         <img src="{{card.picture.url}}" onError="this.src='./assets/images/card-demo.jpg';">
                       </div>
                       <p class="txt-front">{{card.front}}</p>
                     </div>
                     <div class="item-card back">
-                      <p [innerHTML]="card.back"></p>
+                      <p id="back-value" [innerHTML]="card.back"></p>
                     </div>
                   </div>
                 </div>
