--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -65,14 +65,16 @@
               <div class="row" style="width: 98%;margin: auto;">
                 <div class="containerr" *ngFor="let card of deck.cards">
                   <div class="ct-card" (click)="flipped($event)" [class.flipped]="false">
-                    <div class="item-card front" id="front-value">
+                    <div class="item-card front">
                       <div *ngIf="card.picture" style="height: 182px">
                         <img src="{{card.picture.url}}" onError="this.src='./assets/images/card-demo.jpg';">
                       </div>
-                      <p class="txt-front">{{card.front}}</p>
+                      <div class="texs" style="height: 48px; overflow: auto">
+                        <p class="txt-front">{{card.front}}</p>
+                      </div>
                     </div>
                     <div class="item-card back">
-                      <p id="back-value" [innerHTML]="card.back"></p>
+                      <p [innerHTML]="card.back"></p>
                     </div>
                   </div>
                 </div>
