fix noti feedback admin

--- a/my-tinycards-api/app/views/admins/feed_backs/_feed_back.html.erb
+++ b/my-tinycards-api/app/views/admins/feed_backs/_feed_back.html.erb
@@ -9,6 +9,9 @@
     <%= link_to feed_back.deck.title, admins_deck_path(feed_back.deck) %>
   </td>
   <td>
+    <%= feed_back.created_at %>
+  </td>
+  <td>
     <%= feed_back.status %>
   </td>
 </tr>
