--- a/my-tinycards-api/app/views/admins/feed_backs/index.html.erb
+++ b/my-tinycards-api/app/views/admins/feed_backs/index.html.erb
@@ -10,6 +10,7 @@
             <th style="width: 15%">Avata User</th>
             <th style="width: 20%">Username</th>
             <th style="width: 20%">Deck title</th>
+            <th style="width: 20%">Created at</th>
             <th>Info feedback</th>
           </thead>
           <tbody>
