--- a/angular2/src/app/deck-details/deck-details.component.css
+++ b/angular2/src/app/deck-details/deck-details.component.css
@@ -1,6 +1,6 @@
 .btn-favorite {
   background-color: transparent;
-  width: 80%;
+  width: 100%;
   margin-right: 5px;
   color: #276d8c;
   border: 2px solid #276d8c;
@@ -8,10 +8,14 @@
 
 .btn-favorited {
   background-color: #276d8c;
-  width: 80%;
+  width: 100%;
   margin-right: 5px;
   color: white;
   border: 2px solid #276d8c;
+}
+
+.not-current_user {
+  width: 80%;
 }
 
 .favorite-number {
