--- a/app/assets/stylesheets/admin/custom.css
+++ b/app/assets/stylesheets/admin/custom.css
@@ -128,13 +128,12 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
 .ct-card .front {
   background-color: #fff;
   color: black;
-  opacity: .8;
 }
 
 .ct-card .back {
   background-color: #fff;
   color: black;
-  opacity: 0.8;
+  overflow: auto;
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
@@ -142,7 +141,6 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
 }
 .ct-card .back p {
   position: relative;
-  top: 50%;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -824,4 +822,44 @@ footer .quick-links .link-item {
 
 .deck-title {
   font-size: 30px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 600px;
+    height: 140px;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
