--- a/app/views/shared/_header_admin.html.erb
+++ b/app/views/shared/_header_admin.html.erb
@@ -25,34 +25,36 @@
               <b class="caret"></b>
             </p>
           </a>
+
           <ul class="dropdown-menu" style="height: 400px;width: 330px;overflow: auto;">
             <% current_admin.notifications.unread.each do |noti| %>
               <li style="height: 55px;background-color: antiquewhite;">
-                <%= link_to(admins_feed_backs_path) do %>
+                <a class="itfeedback" data-id="<%= noti.id %>" data-content="<%= noti.feed_back.status %>" data-author="<%= noti.feed_back.user.name %>" style="cursor: pointer;">
                   <%= image_tag('icon-warning.png',style: "width: 40px; margin-right: 15px") %>
                   <div style="display: inline-table;">
                     <p><%= noti.feed_back.status %></p>
                     <p style="color: #648de2;">by <%= noti.feed_back.user.name %></p>
                   </div>
-                <% end %>
+                </a>
               </li>
               <hr style="margin: 0px">
             <% end %>
 
             <% current_admin.notifications.read.each do |noti| %>
               <li style="height: 55px">
-                <%= link_to(admins_feed_backs_path) do %>
+                <a class="itfeedback" data-id="<%= noti.id %>" data-content="<%= noti.feed_back.status %>" data-author="<%= noti.feed_back.user.name %>" style="cursor: pointer;">
                   <%= image_tag('icon-warning.png',style: "width: 40px; margin-right: 15px") %>
                   <div style="display: inline-table;">
                     <p><%= noti.feed_back.status %></p>
                     <p>by <%= noti.feed_back.user.name %></p>
                   </div>
-                <% end %>
+                </a>
               </li>
             <% end %>
           </ul>
         </li>
       </ul>
+
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -68,3 +70,45 @@
     </div>
   </div>
 </nav>
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p id="content"></p>
+    <p id="author"></p>
+  </div>
+
+</div>
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+$(".itfeedback").click(function(){
+  var id = $(this).data('id');
+  var author =$(this).data('author');
+  var content =$(this).data('content');
+
+    $('#content').html(content);
+    $('#author').html(author);
+
+    modal.style.display = "block";
+});
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
