Add shortcut behaviors & fix tinymce

--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -13,11 +13,7 @@
 <footer style="background-color: #F7F7F7">
   <div class="container">
     <div class="quick-links">
-      <a href="#" class="link-item">ABOUT</a>
-      <a href="#" class="link-item">TERMS</a>
-      <a href="#" class="link-item">FACEBOOK</a>
-      <a href="#" class="link-item">TWITTER</a>
-      <a href="#" class="link-item">SUPPORT</a>
+      <span>DictCards @2018</span>
     </div>
   </div>
 </footer>
