--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -12,7 +12,7 @@
       <div class="content table-responsive table-full-width">
         <table class="table table-hover">
           <thead>
-            <th>ID</th>
+            <th>STT</th>
             <th style="width: 15%">Username</th>
             <th style="width: 20%">Email</th>
             <th style="width: 20%">Created at</th>
