--- a/app/views/admins/users/_user.html.erb
+++ b/app/views/admins/users/_user.html.erb
@@ -1,19 +1,19 @@
 <tr id="<%= user.id %>">
   <td>
-    <%= link_to user.id %>
+    <%= user.id %>
   </td>
   <td>
-    <%= link_to image_tag(user.avatar, class: "avatar") %>
-    <%= link_to user.name %>
+    <%= image_tag(user.avatar, class: "avatar") %>
+    <%= user.name %>
   </td>
   <td>
     <%= user.email %>
   </td>
   <td>
-    <%= user.created_at %>
+    <%= l user.created_at, format: :format_datetime %>
   </td>
   <td>
-    <%= user.updated_at %>
+    <%= l user.updated_at, format: :format_datetime %>
   </td>
   <td>
     <%= user.decks.size %>
