--- a/app/views/shared/_header_admin.html.erb
+++ b/app/views/shared/_header_admin.html.erb
@@ -11,9 +11,10 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-left">
         <li>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <%= link_to admins_dashboards_path do %>
+            <span class="dropdown-toggle" data-toggle="dropdown"></span>
             <i class="fa fa-dashboard"></i>
-          </a>
+          <% end %>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -61,8 +62,6 @@
             <p><%= t ".account" %><b class="caret"></b></p>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to t(".profile"), "#" %></li>
-            <li><%= link_to t(".settings"), "#" %></li>
             <li><%= link_to t(".logout"), destroy_admin_session_path, method: :delete %></li>
           </ul>
         </li>
