--- a/angular2/src/app/edit-deck/edit-deck.component.css
+++ b/angular2/src/app/edit-deck/edit-deck.component.css
@@ -79,7 +79,7 @@
   box-sizing: border-box;
   cursor: pointer;
   display: inline-block;
-  height: 310px;
+  height: 330px;
   margin-left: 15px;
   overflow: hidden;
   position: relative;
@@ -90,6 +90,7 @@
 .left .cover-deck .import-cover-deck {
   position: absolute;
   width: 100%;
+  height: 330px;
 }
 .left .cover-deck .import-cover-deck .ct-text {
   color: #276d8c;
@@ -98,6 +99,7 @@
 }
 .left .cover-deck .import-cover-deck img {
   width: 100%;
+  height: 100%;
 }
 .left .cover-deck .preview-img {
   top: 0% !important;
@@ -355,7 +357,7 @@
   }
 }
 
-@media only screen and (max-width: 350px) {
+@media only screen and (max-width: 360px) {
   .txt {
     width: 80% !important;
   }
